Bug 1752761 - Fix FormDataParser issue due to extra \r\n, r=sunil

Differential Revision: https://phabricator.services.mozilla.com/D216149